# mediTrail

./: README.md  app.py  doctorsdashboard.html  emergency.html  env.example  fix_google_oauth.py  index.html  login.html  medivault-api.js  medivault.db  pyproject.toml  qrcode.html  requirements.txt  signuppage.html  test_google_oauth.py  test_oauth_setup.py  test_with_env.py
instance/: medivault.db
